# image-forensics

./: .gitignore  Cargo.toml  README.md
examples/: basic_analysis.rs  benford_analysis.rs  cfa_analysis.rs  chromatic_aberration.rs  comprehensive_forensics.rs  copy_move.rs  dct_analysis.rs  ela_analysis.rs  pca_analysis.rs  prnu_analysis.rs  resampling_analysis.rs  shadow_analysis.rs
forensics_report/: detailed_report.json  report.html  report.json  summary.txt
src/: error.rs  image_utils.rs  lib.rs
src/analysis/: benford_analysis.rs  cfa_analysis.rs  chromatic_aberration.rs  copy_move.rs  dct_analysis.rs  ela.rs  jpeg_analysis.rs  luminance_gradient.rs  mod.rs  noise.rs  pca_analysis.rs  prnu_analysis.rs  resampling_detection.rs  shadow_analysis.rs
src/detection/: mod.rs  splicing.rs  tampering.rs
src/metadata/: exif.rs
src/report/: mod.rs  visualization.rs
