[package]
name = "image-forensics"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
imageproc = "0.25.0"
kamadak-exif = "0.6.1"
log = "0.4.29"
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
ndarray-stats = "0.6.0"
num-complex = "0.4.6"
parking_lot = "0.12.5"
rayon = "1.11.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
statrs = "0.18.0"
thiserror = "2.0.17"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3.23.0"
